# batravot

./: .gitignore  BatRaVot.md  README.md
.github/workflows/: smartcontracts.yml
rust/: Cargo.toml  README.md  gas_estimation.xlsx
rust/batravot-batcher/: Cargo.toml
rust/batravot-batcher/src/: ballots.rs  lib.rs  main.rs
rust/batravot-batcher/src/input/: file.rs  stdin.rs
rust/batravot-lib/: Cargo.toml
rust/batravot-lib/src/: crypto.rs  el_curve.rs  election_specifiers.rs  lib.rs  main.rs  representation.rs  types.rs
rust/batravot-lib/src/crypto/: schnorr.rs
rust/batravot-voter/: Cargo.toml
rust/batravot-voter/src/: common.rs  generate_ballot.rs  generate_schnorr.rs  generate_specifiers.rs  lib.rs  main.rs  verify_specifiers.rs
rust/solidity/: .gas-snapshot  foundry.toml  gas_stats.md  hardhat.config.js  package.json
rust/solidity/contracts/: BN254.sol  BatRaVot.sol  DummyToken.sol  MultiSigBatRaVot.sol  Points.sol  SchnorrKnowledgeProof.sol  SchnorrSignature.sol
rust/solidity/scripts/: deploy.js  deploy_custom_token.js
rust/solidity/test/: BatRaVot.js  Election.js  GasEstimations.js  README.md  RustApplicatoin.js  SchnorrProofOfKnowledge.js  SchnorrSignature.js
rust/solidity/test/foundry/: GnosisMultiSig.sol  GnosisMultiSig.t.sol  MultiSigBatRaVot.t.sol  SchnorrKnowledgeProof.t.sol  Voters.sol
rust/src/: converter.rs  curve_abstr.rs  election.rs  lib.rs  main.rs  prover.rs  utils.rs  verifier.rs  voter.rs
sage/: BatRaVotProtocol.ipynb  README.md  bls-pairing.sage
