[package]
name = "batravot-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3" }
ark-ff = { version = "0.3" }
ark-ec = { version = "0.3" }
ark-bn254 = { version = "0.3", features = [ "curve" ] }

sha3 = "0.10.6"

hex = { version = "0.4.3" } # For printing hex values

[dev-dependencies]
rand_chacha = "0.3.1" # For deterministic randomness in tests
