[package]
name = "batravot-voter"
version = "0.1.0"
edition = "2021"


[dependencies]
colored = { version = "2.0.0" }

ark-ff = { version = "0.3" }

hex = { version = "0.4.3" } # For printing hex values
rand = { version = "0.8", features = [ "std", "std_rng" ] }

batravot-lib = { path = "../batravot-lib" }

